k8s/score-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: score-service
  labels:
    app: score-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: score-service
  template:
    metadata:
      labels:
        app: score-service
    spec:
      containers:
        - name: score-service
          image: lemotjuste-score-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          readinessProbe:
            tcpSocket:
              port: 8083
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8083
            initialDelaySeconds: 40
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: score-service
  labels:
    app: score-service
spec:
  selector:
    app: score-service
  ports:
    - port: 8083
      targetPort: 8083
